# conductor

./: .gitignore  .pre-commit-config.yaml  Procfile.conductor  README.md  claude.md  package.json  pyproject.toml  pytest.ini
conductor/: __init__.py  api.py  cancellation.py  client.py  context.py  cron.py  decorator.py  demo.py  dispatcher.py  doctor.py  execution_lock.py  frappe_compat.py  frappe_scheduled_loop.py  hooks.py  idempotency.py  inflight.lua  inflight.py  install.py  kpi_workload.py  logging.py  messages.py  migrate_rq.py  otel.py  patches.txt  rate_limit.lua  rate_limit.py  retry.py  scheduled.py  scheduler.py  scheduler_lock.py  scheduler_loops.py  serialization.py  site_discovery.py  streams.py  sweeper.py  worker.py
dashboard/: components.json  index.html  package-lock.json  package.json  vite.config.js
docs/: audit.md  explanation-architecture.md  explanation-reliability.md  explanation-why-conductor.md  how-to-define-workflows.md  how-to-deploy-on-frappe-cloud.md  how-to-enqueue-jobs.md  how-to-migrate-from-rq.md  how-to-route-frappe-scheduled-jobs.md  how-to-run-multi-tenant.md  how-to-schedule-jobs.md  how-to-triage-failures.md  index.md  reference-cli.md  reference-configuration.md  reference-python-api.md  tutorial-getting-started.md
tests/: conftest.py  test_api_dashboard.py  test_config.py  test_context.py  test_cron.py  test_cron_loop.py  test_dashboard_api.py  test_decorator.py  test_delay_loop.py  test_depth_command.py  test_dlq_commands.py  test_doctor.py  test_emit_job_event.py  test_execution_lock.py  test_frappe_compat_inprocess.py  test_frappe_scheduled_loop.py  test_idempotency.py  test_inflight.py  test_install_constants.py  test_json_safety.py  test_messages.py  test_migrate_rq.py  test_otel.py  test_pool_worker.py  test_rate_limit.py  test_reaper_drift_correction.py  test_reaper_loop.py  test_retry.py  test_scheduled.py  test_scheduler_lifecycle.py  test_scheduler_lock.py  (+12 more)
(+360 files in other folders)
